# lib/routes/api/accounts.js
@@ -310,7 +310,8 @@ function validateUpdateCall(opts) {
     'conferenceParticipantAction',
     'dub',
     'boostAudioSignal',
-    'media_path'
+    'media_path',
+    'listen'
   ]
     .reduce((acc, prop) => (opts[prop] ? ++acc : acc), 0);
 
@@ -376,6 +377,14 @@ function validateUpdateCall(opts) {
   }
   if (opts.media_path && !['no-media', 'partial-media', 'full-media'].includes(opts.media_path)) {
     throw new DbErrorBadRequest('invalid media_path');
+  }
+  if (opts.listen) {
+    if (!['start', 'stop'].includes(opts.listen.action)) {
+      throw new DbErrorBadRequest('listen requires action property of \'start\' or \'stop\'');
+    }
+    if (opts.listen.action === 'start' && !opts.listen.url) {
+      throw new DbErrorBadRequest('listen requires url property when action is \'start\'');
+    }
   }
 }
 
